# BERTCpp

./: .gitignore  CMakeLists.txt  FindMKL.cmake  LICENSE  README.md  profile.cpp
python_test/: modeling.py  real.py  selfatten.py  tranformer.py
src/: batchgemm.cc  batchgemm.h  bert.cc  bert.h  bertembedding.cc  bertembedding.h  conver_python_pb.py  dense.cc  dense.h  embedding.cc  embedding.h  gelu.cc  gelu.h  layernorm.cc  layernorm.h  model.pb.cc  model.pb.h  model.proto  model_pb2.py  pooler.cc  pooler.h  quantization.cc  quantization.h  selfattention.cc  selfattention.h  softmax.cc  softmax.h  tokenizer.cc  tokenizer.h  transformer.cc  transformer.h  util.cc  util.h
test/: batchgemmtest.cpp  bertembeddingtest.cpp  berttest.cpp  densetest.cpp  embeddingtest.cpp  gelutest.cpp  layernormtest.cpp  observertest.cpp  selfattentest.cpp  softmaxtest.cpp  test_vocab.txt  tokenizertest.cpp  transformertest.cpp
